# List

./: CMakeLists.txt  graphdump  indexes.cpp  insertion.cpp  list.cpp  list.h  listopers.cpp  log.cpp  log.html  main.cpp  otheropers.cpp  pointers.cpp  queueopers.cpp  verification.cpp
Debug/: log.cpp  log.html  verification.cpp
Functions/: indexes.cpp  insertion.cpp  otheropers.cpp  pointers.cpp
Struct/: list.cpp
